changed the project structure

--- a/about.html
+++ b/about.html
@@ -7,16 +7,16 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
     />
     <title>About Me</title>
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="styles/about.css" />
   </head>
   <body>
     <main data-testid="test-about-page" class="about-page">
       <header class="navbar">
         <nav>
           <ul>
-            <li><a href="/profile/index.html">Home</a></li>
-            <li><a href="/about/about.html">About Me</a></li>
-            <li><a href="/contact/contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -67,6 +67,5 @@
         </section>
       </section>
     </main>
-    <script src="about.js"></script>
   </body>
 </html>
