--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,16 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
     />
     <title>Contact</title>
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
   </head>
   <body>
     <main class="contact-page">
       <header class="navbar">
         <nav>
           <ul>
-            <li><a href="/profile/index.html">Home</a></li>
-            <li><a href="/about/about.html">About Me</a></li>
-            <li><a href="/contact/contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -100,6 +100,6 @@
       <p id="success" data-testid="test-contact-success" class="success"></p>
     </main>
 
-    <script src="contact.js"></script>
+    <script src="scripts/contact.js"></script>
   </body>
 </html>
