--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
     />
     <title>Profile Card</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <main data-testid="test-profile-card" class="profile-card">
       <header class="navbar">
         <nav>
           <ul>
-            <li><a href="/profile/index.html">Home</a></li>
-            <li><a href="/about/about.html">About Me</a></li>
-            <li><a href="/contact/contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -104,6 +104,6 @@
       </section>
     </main>
 
-    <script src="index.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
